CSS/master.css
* { box-sizing: border-box; }


body {
	font-size: 1rem;
	font-family: 'Montserrat', sans-serif;
	max-width: 960px;
	width:100%;
	position: relative;
	margin: 0 auto;
	padding-bottom: 2rem;
}

body main { 
	line-height: 1.5;
	max-width: 960px;
	width: 100%;
	position: relative;
}

img {
	width:100%;
	height: auto;
}
.container {
	width: 100%;
	max-width: 960px;
	position: relative;
	margin: 0 auto;
	padding: 2rem 0;
}

.logo {
	margin: 0 auto;
	width: 200px;
}

h1 {
	font-family: 'Libre Baskerville', serif;
	font-size: 2rem;
	letter-spacing: 1px;
}


a {
	color: black;
	text-decoration: none;
}

a:hover {
	font-weight: bold;
}

footer {
	font-family: 'Libre Baskerville', serif;
	font-size: .8rem;
}

nav {
	text-align: center;
	text-transform: uppercase;
	letter-spacing: 2px;
}

nav ul {
	padding: 0;
	margin: auto;
}

nav ul li {
    display: inline-block;
    margin: 0 auto;
}

ul {
    list-style-type: none;
    position: relative;
    width: 100%;
    margin: 0 auto;
    padding: 0;
    background-color: #fff;
}


li {
	position: relative;
    margin: 0 auto;
    list-style-type: none;
}


li a {
    display: inline-block;
    color: black;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
}

@media screen and (max-width: 31.25rem) {
/* 500 px */
	h1 {
		font-size: 1rem;
	}

	body {
		font-size:.5rem;
	}

	footer {
		font-size: .5rem;
	}
}

@media screen and (max-width: 50rem) {
/* 800px */
	h1 {
		font-size:1.5rem;
	}

	body {
		font-size: .75rem;
	}

	footer {
		font-size: .75rem;
	}

	.logo {
		width: 150px;
	}
}

/* Adding Grid System Here */

.row {
  overflow: auto;
  margin-bottom: 16px;
}
.row::after {
    content: "";
    clear: both;
    display: block;
}

[class*="col-"] {
  background-color: rgba(45, 157, 192, 0.2);
  border: 1px solid #2d9dc0;
  padding: 16px;
  width: 100%;
}

@media screen and (min-width: 600px) {
  [class*="col-"] {
    background-color: rgba(242, 33, 56, 0.2);
    border: 1px solid rgba(249, 38, 114, 1);
  }
  .col-1 {width: 8.33%;}
  .col-2 {width: 16.66%;}
  .col-3 {width: 25%;}
  .col-4 {width: 33.33%;}
  .col-5 {width: 41.66%;}
  .col-6 {width: 50%;}
  .col-7 {width: 58.33%;}
  .col-8 {width: 66.66%;}
  .col-9 {width: 75%;}
  .col-10 {width: 83.33%;}
  .col-11 {width: 91.66%;}
  .col-12 {width: 100%;}

  [class*="col-"] {
    float: left;
  }

}

@media screen and (max-width: 600px) {
	.container {
		padding: 0;
	}

	body {
		padding-bottom: 0;
	}
}

